# triton_inference

./: LICENSE  README.md  docker-compose.yml  simple_request.py
client/apps/image_client/: CMakeLists.txt  Dockerfile
client/apps/image_client/src/: connection_manager.cpp
client/apps/image_client/src/model_executables/: densenet_client.cpp  densenet_client.hpp
client/apps/image_client/src/triton/: common.hpp  triton.hpp
server/: Dockerfile  fetch_models.sh
